--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 !**/docker-only/NOTES
 
 **/user-specific*.pri
+**/_user-qt*
+
+**/run/user-specific/*
+!**/run/user-specific/NOTES
 
 
 **/-build_/*
